--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node scripts/generate-supabase-info.js && vite build",
     "preview": "vite preview",
     "clean": "rm -rf node_modules/.vite dist"
   },
