--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,32 @@
-# Dependencies
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Production
-/build
-/dist
+node_modules
+dist
+dist-ssr
+*.local
 
-# Environment variables - SECRETS
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# 🔐 FICHIERS SENSIBLES - NE JAMAIS VERSIONNER
+utils/supabase/info.tsx
+utils/supabase/info.ts
 .env
 .env.local
 .env.production
-
-# Supabase secrets - IMPORTANT
-utils/supabase/info.tsx
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-
-# OS
-.DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
-.idea/
-
-# Vercel
-.vercel
+.env.development
