--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://www.gstatic.com https://cdn.jsdelivr.net https://*.supabase.co https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net data:; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://maps.googleapis.com https://nominatim.openstreetmap.org https://api.mapbox.com https://securetoken.googleapis.com https://fcm.googleapis.com https://router.project-osrm.org wss://*.supabase.co; frame-src 'self' https://maps.googleapis.com; worker-src 'self' blob:; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content;"
+          "value": "default-src 'self'; script-src 'self' https://maps.googleapis.com https://www.gstatic.com https://cdn.jsdelivr.net https://*.supabase.co https://www.googletagmanager.com https://fcm.googleapis.com https://securetoken.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net data:; img-src 'self' data: blob: https://maps.googleapis.com https://maps.gstatic.com https://www.gstatic.com https://*.supabase.co https://api.mapbox.com https://openstreetmap.org https://*.openstreetmap.org; connect-src 'self' https://*.supabase.co https://maps.googleapis.com https://nominatim.openstreetmap.org https://api.mapbox.com https://securetoken.googleapis.com https://fcm.googleapis.com https://fcmregistrations.googleapis.com https://router.project-osrm.org https://api.flutterwave.com https://api.ravepay.co wss://*.supabase.co; frame-src 'self' https://maps.googleapis.com https://checkout.flutterwave.com; worker-src 'self' blob:; object-src 'none'; base-uri 'self'; form-action 'self' https://checkout.flutterwave.com; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content;"
         },
         {
           "key": "X-Permitted-Cross-Domain-Policies",
@@ -41,15 +41,15 @@
         },
         {
           "key": "Cross-Origin-Embedder-Policy",
-          "value": "require-corp"
+          "value": "credentialless"
         },
         {
           "key": "Cross-Origin-Opener-Policy",
-          "value": "same-origin"
+          "value": "same-origin-allow-popups"
         },
         {
           "key": "Cross-Origin-Resource-Policy",
-          "value": "same-origin"
+          "value": "cross-origin"
         },
         {
           "key": "X-Download-Options",
