--- a/vercel.json
+++ b/vercel.json
@@ -92,6 +92,20 @@
       ]
     }
   ],
+  "redirects": [
+    {
+      "source": "/:path((?!_next|api|assets).*)",
+      "has": [
+        {
+          "type": "header",
+          "key": "x-forwarded-proto",
+          "value": "http"
+        }
+      ],
+      "destination": "https://smartcabb.com/:path*",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/app/:path*",
